versioned_docs/version-2025.2.5/professor/leandro_luiz_borges.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Leandro Luiz Borges",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Biologia I - 2576",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Prática profissional (estágio obrigatório) e escrita de relatório - 2387",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "TAL2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Biofísica - 82",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Biologia III - 1241",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2024A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Biologia I - 1073",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Biologia III - 1241",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "IIW2023A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Biologia I - 2576",
          "size": 1,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia I - 1073",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "IIW2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Métodos analíticos - 2379",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Prática profissional (estágio obrigatório) e escrita de relatório - 2387",
          "size": 1,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Leandro Luiz Borges

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

